maze.lessons.maze.island.IslandMaze.scala.error
Escaper:37: error: not found: value etat
	etat match {
        ^